Added bushlandia series

--- a/_includes/book-preview.html
+++ b/_includes/book-preview.html
@@ -4,7 +4,7 @@
 
 <!-- Book Preview Button -->
 <div class="book-preview-trigger">
-  <button id="openPreviewBtn" class="btn btn-preview">Preview Inside</button>
+  <button id="openPreviewBtn" class="btn btn-preview">Look Inside</button>
 </div>
 
 <!-- Book Preview Modal -->
