--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -41,8 +41,25 @@ layout: default
       </div>
       
       <div class="book-details-main">
+        {% if page.series %}
+        <div class="series-badge">
+          <span class="series-name">{{ page.series.name }}</span>
+          <span class="series-number">Book {{ page.series.number }} of {{ page.series.total_books }}</span>
+        </div>
+        {% endif %}
+        
         <h1>{{ page.title }}</h1>
-        <p class="book-author">by {% if page.author.name %}{{ page.author.name }}{% else %}{{ page.author }}{% endif %}</p>
+        {% if page.sub_title and page.sub_title != "" %}
+          <p class="book-subtitle">{{ page.sub_title }}</p>
+        {% endif %}
+        <p class="book-author">
+          by 
+          {% if page.author.url %}
+            <a href="{{ page.author.url | relative_url }}">{% if page.author.name %}{{ page.author.name }}{% else %}{{ page.author }}{% endif %}</a>
+          {% else %}
+            {% if page.author.name %}{{ page.author.name }}{% else %}{{ page.author }}{% endif %}
+          {% endif %}
+        </p>
         
         <div class="book-meta">
           {% if page.age_range %}
@@ -150,7 +167,10 @@ layout: default
 {
   "@context": "https://schema.org",
   "@type": "Book",
-  "name": "{{ page.title }}",
+  "name": "{% if page.sub_title and page.sub_title != '' %}{{ page.title }}: {{ page.sub_title }}{% else %}{{ page.title }}{% endif %}",
+  {% if page.sub_title and page.sub_title != "" %}
+  "alternativeHeadline": "{{ page.sub_title }}",
+  {% endif %}
   "author": {
     "@type": "Person",
     "name": "{% if page.author.name %}{{ page.author.name }}{% else %}{{ page.author }}{% endif %}"
@@ -340,6 +360,67 @@ layout: default
 </script>
 {% endif %}
 
+{% if page.series %}
+<section class="series-books">
+  <div class="container">
+    <h2>{{ page.series.name }} Series</h2>
+    <p class="series-description">Book {{ page.series.number }} of {{ page.series.total_books }} in the series</p>
+    
+    <div class="books-grid">
+      {% assign series_books = site.books | where_exp: "book", "book.series.name == page.series.name" | sort: "series.number" %}
+      {% for book in series_books %}
+        <div class="book-card-small {% if book.url == page.url %}current-book{% endif %}">
+          <div class="book-cover-small book-cover-square">
+            <a href="{{ book.url | relative_url }}" class="book-cover-link">
+              {% if book.cover_image %}
+                {% assign cover_base = book.cover_image | replace: '-cover-large.jpg', '' | replace: '-cover.jpg', '' | replace: '.jpg', '' %}
+                {% assign square_small = cover_base | append: '-cover-square-small.jpg' %}
+                {% assign square_medium = cover_base | append: '-cover-square-medium.jpg' %}
+                {% assign square_large = cover_base | append: '-cover-square-large.jpg' %}
+                <img 
+                  src="{{ square_medium | relative_url }}" 
+                  srcset="{{ square_small | relative_url }} 250w, {{ square_medium | relative_url }} 400w, {{ square_large | relative_url }} 600w"
+                  sizes="(max-width: 768px) 250px, 400px"
+                  alt="{{ book.title }}" 
+                  loading="lazy">
+              {% else %}
+                <div class="book-placeholder-small">
+                  <span class="cover-coming-soon-small">Cover Coming Soon</span>
+                </div>
+              {% endif %}
+            </a>
+            {% if book.series.number %}
+            <div class="series-book-number">Book {{ book.series.number }}</div>
+            {% endif %}
+          </div>
+          <div class="book-info-small">
+            <h3><a href="{{ book.url | relative_url }}">{{ book.title }}</a></h3>
+            {% if book.sub_title and book.sub_title != "" %}
+              <p class="book-subtitle-small">{{ book.sub_title }}</p>
+            {% endif %}
+            {% if book.author %}
+              <p class="book-author-small">
+                by 
+                {% if book.author.name %}
+                  {% if book.author.url %}
+                    <a href="{{ book.author.url | relative_url }}">{{ book.author.name }}</a>
+                  {% else %}
+                    {{ book.author.name }}
+                  {% endif %}
+                {% else %}
+                  {{ book.author }}
+                {% endif %}
+              </p>
+            {% endif %}
+            <p class="book-status-small">{{ book.status }}</p>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
+</section>
+{% endif %}
+
 {% if site.books.size > 1 %}
 <section class="related-books">
   <div class="container">
@@ -372,6 +453,9 @@ layout: default
           </div>
           <div class="book-info-small">
             <h3><a href="{{ book.url | relative_url }}">{{ book.title }}</a></h3>
+            {% if book.sub_title and book.sub_title != "" %}
+              <p class="book-subtitle-small">{{ book.sub_title }}</p>
+            {% endif %}
             {% if book.author %}
               <p class="book-author-small">
                 by 
