Email address and tiktok social media

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,7 @@
                     <div class="footer-text">
                         <p>&copy; {{ 'now' | date: "%Y" }} {{ site.title }}. All rights reserved.</p>
                         <p>Growing stories, nurturing dreams</p>
+                        <p>Questions? Email us at <a href="mailto:contact@wildimaginationpress.com">contact@wildimaginationpress.com</a></p>
                         <p class="footer-privacy"><a href="{{ '/privacy/' | relative_url }}">Privacy Policy</a></p>
                     </div>
                 </div>
