--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -69,9 +69,9 @@ layout: default
 
       <!-- Call to Action -->
       <div class="post-cta">
-        <h3>Join Our Story Tree</h3>
+        <h3>Join Our Story Tree Email List</h3>
         <p>Get updates on new releases, behind-the-scenes stories, and exclusive activities for young readers.</p>
-        <a href="{{ '/#contact' | relative_url }}" class="btn btn-primary">Subscribe Now</a>
+        <a href="{{ '/#contact' | relative_url }}" class="btn btn-primary">Join Our Story Tree Email List</a>
       </div>
     </div>
   </div>
